# MacroMaker

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: main.yml
src/: main.cpp
